# playwright-python-lambda-container

./: LICENSE  README.md  compose.yaml  pyproject.toml
docker/: Dockerfile
tests/: README.md  compose.yaml  example.html
tests/example_lambda/: Dockerfile  Dockerfile.aws  example_lambda.py  healthcheck.py
tests/pytests/: test_playwright-python-lambda.py
tests/test_playwright-python-lambda/: Dockerfile
