[tool.poetry]
name = "playwright-python-lambda-container"
version = "0.1.0"
description = ""
authors = ["yukiwaga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.43.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
